Quick fix page wrap and button font

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -41,8 +41,7 @@ li > a:hover {
 .pagewrap {
 	position: absolute;
 	top: 0;
-	width: 85%;
-	margin-left: 7.5%;
+	width: inherit;
 	background: rgb(255,255,255);
 	background: rgba(255,255,255,0.9);
 	opacity: 0.7;
@@ -90,6 +89,7 @@ li > a:hover {
 }
 .welcomeh1 {
 	font-size: 260px;
+	margin-top: -100px;
 }
 .info {
 	font-size: 40px;
@@ -99,7 +99,7 @@ li > a:hover {
 /* MEDIA QUERIES */
 @media (max-width: 1075px) {
 	.welcome {
-		width: 700px;
+		width: 680px;
 	}
 	.welcomeh1 {
 		font-size: 200px;
@@ -108,7 +108,7 @@ li > a:hover {
 		font-size: 30px;
 	}
 	li {
-		margin-top:5px;
+		margin-top: 5px;
 		font-size: 40px;
 		color: #808080;
 	}
@@ -119,6 +119,51 @@ li > a:hover {
 	}
 	li > a:hover {
 		font-size: 40px;
+		color: #82a6fa;
+		text-decoration: none;
+	}
+}
+@media (max-width: 770px) {
+	.pagewrap {
+		position: absolute;
+		top: 0;
+		width: 98%;
+		height: 100%;
+		background: rgb(255,255,255);
+		background: rgba(255,255,255,0.9);
+		opacity: 0.7;
+		z-index: -1;
+	}
+	li {
+		margin-top: 15px;
+		font-size: 30px;
+		color: #808080;
+	}
+	li > a {
+		font-size: 30px;
+		color: #808080;
+		text-decoration: none;
+	}
+	li > a:hover {
+		font-size: 30px;
+		color: #82a6fa;
+		text-decoration: none;
+	}
+}
+@media (max-width: 660px) {
+
+	li {
+		margin-top: 20px;
+		font-size: 25px;
+		color: #808080;
+	}
+	li > a {
+		font-size: 25px;
+		color: #808080;
+		text-decoration: none;
+	}
+	li > a:hover {
+		font-size: 25px;
 		color: #82a6fa;
 		text-decoration: none;
 	}
